vcs/specs/parser/fail/statements/return_invalid_expr.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, return, invalid, error
// @description: Test return with invalid expression (comma)
// @expected-error: E048

fn test() -> Int {
    return ,;
}
